<resources>
    <string name="app_name">Бригада</string>
    <string name="authorization">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="login">Имя</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="email">e-mail</string>
    <string name="password_recovery">Забыли пароль ?</string>

    <string name="user_not_found">Твоя рожа на всех столбах висит, но здесь поьзователя с таким e-mail нет.</string>
    <string name="password_failed">Фара, я люблю тебя как брата, но пароль есть пароль.</string>
    <string name="account_not_verified">Есть маза, что ссука среди нас, поэтому подтвердите e-mail.</string>
    <string name="user_is_already_registered">Брат, это очень дурная политика - регаться второй раз.</string>
    <string name="bad_password">Брат, у тебя нервы как стальные канаты, а пароль херня. (6 символов это МИНИМУМ !!!) </string>
    <string name="bad_password3">Неверный пароль.... Ну чё, клоун, готов землю жрать? </string>
    <string name="different_password">Я терпеть не стану, я способ найду, я добьюсь одинаковости паролей.</string>
    <string name="empty_editText">Карты под стол, а стволы на стол. А поле не должно быть пустым.</string>
    <string name="bad_email">Знаешь, какой самый главный плюс у собаки, который больше чем все остальные минусы? Собака есть в почтовом адресе.</string>
    <string name="bad_email2">Не удалось мне отправить на эту почту письмо. ПОНИМАЕШЬ ??? </string>
    <string name="bad_email3">Такой человек не состоит в бригаде.</string>
    <string name="email_already_registered">Это тот смертник, который твоему брательнику череп расколотил. Или еще кто-то. Но такой email уже есть в моей бесплатной базе.</string>
    <string name="password_not_confirmed">Сань, ты что шланг? Ты ж не шланг. Пароли разные у тебя.</string>
    <string name="email_confirm_dialog_title">Подтверждение почты.</string>
    <string name="email_confirm_dialog_message">На указанный email было отправлено письмо. Перейдите по ссылке в нем чтобы подтвердить почту.</string>
    <string name="network_failed_dialog_title">Ошибка интернета.</string>
    <string name="network_failed_dialog_message">У тебя там интернета нет, брат. Звони на пейджер пока.</string>
    <string name="select_avatar">Выберите аватар и введите имя.</string>
    <string name="name1">Белый</string>
    <string name="name2">Космос</string>
    <string name="name3">Пчёла</string>
    <string name="name4">Филл</string>
    <string name="name5">Панин</string>
    <string name="name6">Бригадир</string>
    <string name="name7">Малый</string>
    <string name="name8">Кука</string>

</resources>